# flux-mcp

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-deploy.yaml
examples/kind/: Dockerfile  Dockerfile.spack  Dockerfile.spack-2404  README.md  minicluster.yaml
examples/kind/scripts/: flux-mcp.yaml  requirements.txt  run-spack.yaml
flux_mcp/: registry.py  version.py
flux_mcp/command/: __init__.py  archive.py  cli.py  execute.py
flux_mcp/instance/: archive.py
flux_mcp/job/: __init__.py  core.py  delegate.py  events.py
flux_mcp/resource/: __init__.py  tools.py
flux_mcp/sched/: __init__.py  cancel.py  info.py  initialize.py  match_allocate.py  queue.py
flux_mcp/transformer/: __init__.py  prompts.py  tool.py
flux_mcp/utils/: fileio.py  text.py
flux_mcp/validate/: __init__.py  prompts.py  tools.py  validate.py
tests/: conftest.py  helpers.py  test_flux_counts.py  test_flux_job_core.py  test_flux_job_delegation.py  test_flux_resource.py  test_flux_validate.py
