[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flux-mcp"
version = "0.1.0"
description = "A collection of Flux Capacitor tools for MCP servers"
dependencies = [
    "mcp>=1.0.0" # Ensure they have the base SDK
]

[project.entry-points."mcp.packages"]
# Optional: If there is a future registry for auto-discovery
flux-mcp = "flux_mcp"

[tool.black]
exclude = "^env/"
line-length = 100

[tool.isort]
profile = "black" # needed for black/isort compatibility
line_length = 100
